[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/man/man06c_cl1.jpg" type="Texture" id=1]
[ext_resource path="res://addons/mdna_core/nodes/hotspot.gd" type="Script" id=2]
[ext_resource path="res://scenes/man/man06c_cl.gd" type="Script" id=3]
[ext_resource path="res://addons/mdna_inventory/nodes/trigger_hotspot.gd" type="Script" id=4]
[ext_resource path="res://inventory/insex.tres" type="Resource" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="TriggerHotspot" type="TextureButton" parent="."]
margin_left = 955.636
margin_top = 444.975
margin_right = 1665.64
margin_bottom = 937.975
focus_mode = 0
enabled_focus_mode = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
valid_inventory_items = [ ExtResource( 5 ) ]

[node name="Hotspot" type="TextureButton" parent="."]
margin_left = -4.23779
margin_top = 996.027
margin_right = 2588.76
margin_bottom = 1460.03
mouse_default_cursor_shape = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
hotspot_type = 1
target_scene = "res://scenes/man/man06.tscn"
target_view = "back"

[node name="man_hand_on_insex" type="TextureButton" parent="."]
margin_left = 932.0
margin_top = 375.0
margin_right = 1742.0
margin_bottom = 955.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
hotspot_type = 11
[connection signal="item_used" from="TriggerHotspot" to="." method="_on_TriggerHotspot_item_used"]
[connection signal="pressed" from="man_hand_on_insex" to="." method="_on_man_hand_on_insex_pressed"]
